<resources>
    <string name="app_name">RoomSampleApp</string>
    <string name="name">Name: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="address">Address: %1$s, %2$s, %3$s, %4$s</string>
    <string name="add_new_contact">add_new_contact</string>
    <string name="name_tf">Name:</string>
    <string name="email_tf">Email:</string>
    <string name="street_address">Street Address</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="country">Country:</string>
    <string name="save">Save</string>

</resources>