<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dimen_16dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <TextView
            android:id="@+id/tv_contact_name"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toTopOf="@+id/gl_top" />

        <TextView
            android:id="@+id/tv_contact_email"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact_name" />

        <TextView
            android:id="@+id/tv_contact_name2"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/address"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact_email" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimen_8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/dimen_8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/dimen_8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dimen_8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>